k8s-manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cafe-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: cafe-app
  template:
    metadata:
      labels:
        app: cafe-app
    spec:
      containers:
      - name: cafe-app
        image: premgowda07/cafe-application:ver_3
        ports:
        - containerPort: 80
